--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
 <head>
+    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A brief description of your webpage.">
+    <meta name="keywords" content="keyword1, keyword2, keyword3">
+    <link rel="icon" href="path/to/your/favicon.ico" type="image/x-icon">
+    <title>Remy Moscovitz</title>
+    <meta property="og:title" content="Your Page Title Here" />
+    <meta property="og:description" content="A brief description of your webpage." />
+    <meta property="og:image" content="URL_to_image" />
+    <meta property="og:url" content="https://yourwebsite.com" />
+    <html lang="en">
+
 <style>
     nav {
         background-color: black;
