--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A brief description of your webpage.">
     <meta name="keywords" content="keyword1, keyword2, keyword3">
-    <link rel="icon" href="path/to/your/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://remymoscovitz.com/rm_custom_icon.png" type="image/x-icon">
     <title>Remy Moscovitz</title>
     <meta property="og:title" content="Your Page Title Here" />
     <meta property="og:description" content="A brief description of your webpage." />
