--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <div class="floating_div"></div>
     <h1 class="main_header">Site in progress</h1>
     <div class="loader"></div>
+    <img src="remymoscovitz.com/rm_custom_icon.png">
 
 </body>
 </html>
