--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     }
     .floating_div {
         background-color: goldenrod;
-        height: 13vh;
-        width: 13vh;
+        height: 13.5vh;
+        width: 13.5vh;
         filter: blur(10px);
         opacity: 49%;
         border-radius: 999px;
@@ -70,11 +70,22 @@
 @keyframes l8 {
     100% {background-position: -8px 0%,-8px 50%,-8px 100%}
 }
+.floating_logo {
+        height: 13vh;
+        width: 13vh;
+        opacity: 70%;
+        border-radius: 999px;
+        position: fixed;
+        animation: totheright 6s infinite ease-in-out;
+        top: 5vh;
+        
+    }
 
 </style>
 </head>
 <body>
     <div class="floating_div"></div>
+    <img class="floating_logo" src="https://i.ibb.co/CbT5Qf9/rm-custom-icon.png">
     <h1 class="main_header">Site in progress</h1>
     <div class="loader"></div>
 
