--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A brief description of your webpage.">
-    <meta name="keywords" content="keyword1, keyword2, keyword3">
+    <meta name="description" content="Website in progress...">
+    <meta name="keywords" content="remym, moscovitz, remymoscovitz, rmoscovitz">
     <link rel="icon" href="https://remymoscovitz.com/rm_custom_icon.png" type="image/png">
     <title>Remy Moscovitz</title>
-    <meta property="og:title" content="Your Page Title Here" />
-    <meta property="og:description" content="A brief description of your webpage." />
-    <meta property="og:image" content="URL_to_image" />
-    <meta property="og:url" content="https://yourwebsite.com" />
+    <meta property="og:title" content="Remy Moscovitz" />
+    <meta property="og:description" content="Wesite in progress..." />
+    <meta property="og:image" content="https://remymoscovitz.com/rm_custom_icon.png" />
+    <meta property="og:url" content="remymoscovitz.com" />
     <html lang="en">
 
 <style>
