new icon for navigation + index

--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
               </div>  
               <div class="Title1">Home</div>
             <div class="logo2">
-              <img src="https://i.ibb.co/CbT5Qf9/rm-custom-icon.png" class="logo2" alt="">
+              <img src="white_nav_icon.png" class="logo2" alt="">
             </div>
             <div class="menu-items">
               <li><a href="#">Home</a></li>
