update index and css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="floating_div"></div>
-    <img class="floating_logo" src="https://i.ibb.co/CbT5Qf9/rm-custom-icon.png">
+    <img class="floating_logo" src="rm_custom_icon.png">
     <h1 class="main_header">Site in progress</h1>
     <div class="loader"></div>
 </body>
