--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <div class="bg_custom"></div>
     <div class="floating_div"></div>
     <img class="floating_logo" src="rm_custom_icon.png">
     <h1 class="main_header">Site in progress</h1>
