--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
     <link href="css.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<body class="body_1">
     <nav>
         <div class="navbar">
           <div class="container nav-container">
