--- a/test.html
+++ b/test.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <div class="bg_custom"></div>
     <nav>
         <div class="navbar">
           <div class="container nav-container">
@@ -38,6 +39,7 @@
           </div>
         </div>
       </nav>
+      
 </body>
-<div class="" ></div>
+
 </html>
