--- a/test.html
+++ b/test.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Website in progress...">
-    <meta name="keywords" content="remym, moscovitz, remymoscovitz, rmoscovitz">
-    <link rel="icon" href="https://remymoscovitz.com/rm_custom_icon.png" type="image/png">
-    <title>Remy Moscovitz</title>
-    <meta property="og:title" content="Remy Moscovitz" />
-    <meta property="og:description" content="Wesite in progress..." />
-    <meta property="og:image" content="https://remymoscovitz.com/rm_custom_icon.png" />
-    <meta property="og:url" content="remymoscovitz.com" />
-    <html lang="en">
-    <link href="css.css" rel="stylesheet" type="text/css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Website in progress...">
+  <meta name="keywords" content="remym, moscovitz, remymoscovitz, rmoscovitz">
+  <link rel="icon" href="rm_custom_icon.png" type="image/png">
+  <title>Home</title>
+  <meta property="og:title" content="Remy Mosvitz" />
+  <meta property="og:description" content="Wesite in progress..." />
+  <meta property="og:image" content="rm_custom_icon.png" />
+  <meta property="og:url" content="remymoscovitz.com" />
+  <html lang="en">
+  <link href="css.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -31,9 +31,9 @@
             </div>
             <div class="menu-items">
               <li><a href="#">Home</a></li>
-              <li><a href="#">Pictures</a></li>
-              <li><a href="#">Videos</a></li>
-              <li><a href="#">Audios</a></li>
+              <li><a href="#">x</a></li>
+              <li><a href="#">y</a></li>
+              <li><a href="#">z</a></li>
               <li><a href="#">x</a></li>
             </div>
           </div>
