--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Website in progress...">
     <meta name="keywords" content="remym, moscovitz, remymoscovitz, rmoscovitz">
-    <link rel="icon" href="https://remymoscovitz.com/rm_custom_icon.png" type="image/png">
+    <link rel="icon" href="rm_custom_icon.png" type="image/png">
     <title>Remy Moscovitz</title>
     <meta property="og:title" content="Remy Moscovitz" />
     <meta property="og:description" content="Wesite in progress..." />
-    <meta property="og:image" content="https://remymoscovitz.com/rm_custom_icon.png" />
+    <meta property="og:image" content="rm_custom_icon.png" />
     <meta property="og:url" content="remymoscovitz.com" />
     <html lang="en">
     <link href="css.css" rel="stylesheet" type="text/css">
