--- a/test.html
+++ b/test.html
@@ -30,11 +30,10 @@
               <img src="white_nav_icon.png" class="logo2" alt="">
             </div>
             <div class="menu-items">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">x</a></li>
-              <li><a href="#">y</a></li>
-              <li><a href="#">z</a></li>
-              <li><a href="#">x</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">LinkedIN</a></li>
+              <li><a href="#">GitHub</a></li>
+              <li><a href="#">Contact</a></li>
             </div>
           </div>
         </div>
