--- a/Contact.html
+++ b/Contact.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Website in progress...">
   <meta name="keywords" content="remym, moscovitz, remymoscovitz, rmoscovitz">
   <link rel="icon" href="rm_custom_icon.png" type="image/png">
-  <title>Home</title>
+  <title>Contact</title>
   <meta property="og:title" content="Remy Mosvitz" />
   <meta property="og:description" content="Wesite in progress..." />
   <meta property="og:image" content="rm_custom_icon.png" />
@@ -25,15 +25,15 @@
               <span class="line line2"></span>
               <span class="line line3"></span>
               </div>  
-              <div class="Title1">Home</div>
+              <div class="Title1">Contact</div>
             <div class="logo2">
               <img src="white_nav_icon.png" class="logo2" alt="">
             </div>
             <div class="menu-items">
+              <li><a href="Home.html">Home</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">LinkedIN</a></li>
               <li><a href="#">GitHub</a></li>
-              <li><a href="#">Contact</a></li>
             </div>
           </div>
         </div>
