edited css and html to prep for slide animation. also changed file names to lowercase

--- a/Contact.html
+++ b/Contact.html
@@ -38,7 +38,7 @@
           </div>
         </div>
       </nav>
-      <div class="main_header">Hello</div>
+      <div class="main_heading">Email: mail@remymoscovitz.com</div>
 </body>
 
 </html>
