fixed floating div + made new header class

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="bg_custom"></div>
     <div class="floating_div"></div>
     <img class="floating_logo" src="rm_custom_icon.png">
-    <h1 class="main_header">Site in progress</h1>
+    <h1 class="main_header2">Site in progress</h1>
     <div class="loader"></div>
 </body>
 </html>
