repaired and replaced new files for fixed navigation

--- a/Home.html
+++ b/Home.html
@@ -11,12 +11,12 @@
   <meta property="og:image" content="rm_custom_icon.png" />
   <meta property="og:url" content="remymoscovitz.com" />
   <html lang="en">
-  <link href="hamburger.css.css" rel="stylesheet" type="text/css">
+  <link href="hamburger.css" rel="stylesheet" type="text/css">
 	  </head>
 
     <body>
       <div id="mySidenav" class="sidenav">
-        <a href="#">Home</a>
+        <a href="#">Photos</a>
         <a href="#">LinkedIn</a>
         <a href="#">Contact</a>
         <a href="#">Projects</a>
