redirected 2 nav links (home + contact)

--- a/Contact.html
+++ b/Contact.html
@@ -16,7 +16,7 @@
 
     <body>
       <div id="mySidenav" class="sidenav">
-        <a href="#">Home</a>
+        <a href="home.html">Home</a>
         <a href="#">Photos</a>
         <a href="#">LinkedIn</a>
         <a href="#">Projects</a>
