--- a/Home.html
+++ b/Home.html
@@ -18,7 +18,7 @@
       <div id="mySidenav" class="sidenav">
         <a href="#">Photos</a>
         <a href="#">LinkedIn</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
         <a href="#">Projects</a>
       </div>
       <div class="tray">
