fixed rem font sizes (not nav just page content)

--- a/Contact.html
+++ b/Contact.html
@@ -61,8 +61,8 @@
         }
       </script>
       <div id="main">
-        <h2>Contact</h2>
-        <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
+        <h2 style="font-size: 2rem;">Contact</h2>
+        <p style="font-size: 1rem;">Click on the element below to open the side navigation menu, and push this content to the right.</p>
       </div>
       </body>
 
