fixed navigation+ renames

--- a/Home.html
+++ b/Home.html
@@ -16,10 +16,10 @@
 
     <body onload="fadeIn()">
       <div id="mySidenav" class="sidenav">
-        <a href="#">Photos</a>
         <a href="#">LinkedIn</a>
         <a href="contact.html">Contact</a>
-        <a href="#">Projects</a>
+        <a href="projects.html">Projects</a>
+        <a href="#">About</a>
       </div>
       <div class="tray">
         <div class="name"></div>
