animation fadein or all pages

--- a/home.html
+++ b/home.html
@@ -52,10 +52,10 @@
     });
 
     function fadeIn() {
-      document.getElementById("main").style.opacity = "1";
+            document.getElementById("main").style.opacity = "1";
+            document.getElementById("main").style.marginTop = "0px";
 
-
-    }
+        }
 
 
     function openNav() {
