started flexbox + glass effect

--- a/projects.html
+++ b/projects.html
@@ -72,6 +72,21 @@
     <div id="main">
         <h2>Projects</h2>
         <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
+        <div class="project-items">
+
+            <div>
+                <h3>Hello, box 1</h3>
+
+            </div>
+
+            <div>
+                Hello, box 2
+            </div>
+
+            <div>
+                Hello, box 3
+            </div>
+        </div>
     </div>
 </body>
 
