fixed nav bar, styles, blur + more

--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,14 @@
 </head>
 
 <body onload="fadeIn()">
+  <div class="top_fade"> </div>
   <div id="mySidenav" class="sidenav">
     <a href="home.html">Home</a>
     <a href="#">LinkedIn</a>
     <a href="projects.html">Projects</a>
     <a href="#">About</a>
   </div>
-  <div class="tray">
+  <div style="position: fixed; z-index: 4;">
     <div class="name"></div>
     <div class="hamburger hamburger--minus js-hamburger">
       <div class="hamburger-box">
@@ -69,9 +70,11 @@
 
   <div id="main">
     <div id="fadeIn">
+     
+      <div class="spacer"></div>
       <h2 style="font-size: 2rem;">Contact</h2>
       <p style="font-size: 1 rem;">Click on the element below to open the side navigation menu, and push this content to
-        the right.</p>
+        the right. ck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content t</p>
     </div>
   </div>
 </body>
