--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Website in progress...">
   <meta name="keywords" content="remym, moscovitz, remymoscovitz, rmoscovitz">
   <link rel="icon" href="rm_custom_icon.png" type="image/png">
-  <title>Home</title>
+  <title>Contact</title>
   <meta property="og:title" content="Remy Mosvitz" />
   <meta property="og:description" content="Wesite in progress..." />
   <meta property="og:image" content="rm_custom_icon.png" />
@@ -16,13 +16,14 @@
 </head>
 
 <body onload="fadeIn()">
+  <div class="top_fade"> </div>
   <div id="mySidenav" class="sidenav">
     <a href="#">LinkedIn</a>
-    <a href="contact.html">Contact</a>
     <a href="projects.html">Projects</a>
+    <a href="contact.html">Contact</a>
     <a href="#">About</a>
   </div>
-  <div class="tray">
+  <div style="position: fixed; z-index: 4;">
     <div class="name"></div>
     <div class="hamburger hamburger--minus js-hamburger">
       <div class="hamburger-box">
@@ -51,13 +52,6 @@
       isOpen = !isOpen;
     });
 
-    function fadeIn() {
-            document.getElementById("main").style.opacity = "1";
-            document.getElementById("main").style.marginTop = "0px";
-
-        }
-
-
     function openNav() {
       document.getElementById("mySidenav").style.width = "250px";
       document.getElementById("main").style.marginLeft = "250px";
@@ -67,10 +61,21 @@
       document.getElementById("mySidenav").style.width = "0";
       document.getElementById("main").style.marginLeft = "0";
     }
+    function fadeIn() {
+            document.getElementById("main").style.opacity = "1";
+            document.getElementById("main").style.marginTop = "0px";
+
+        }
   </script>
+
   <div id="main">
-    <h2>Welcome</h2>
-    <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
+    <div id="fadeIn">
+     
+      <div class="spacer"></div>
+      <h2 style="font-size: 2rem;">Home</h2>
+      <p style="font-size: 1 rem;">Click on the element below to open the side navigation menu, and push this content to
+        the right. ck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content t</p>
+    </div>
   </div>
 </body>
 
