--- a/projects.html
+++ b/projects.html
@@ -16,13 +16,14 @@
 </head>
 
 <body onload="fadeIn()">
+    <div class="top_fade"> </div>
     <div id="mySidenav" class="sidenav">
         <a href="home.html">Home</a>
         <a href="contact.html">LinkedIn</a>
         <a href="contact.html">Contact</a>
         <a href="#">About</a>
     </div>
-    <div class="tray">
+    <div style="position: fixed; z-index:3;">
         <div class="name"></div>
         <div class="hamburger hamburger--minus js-hamburger">
             <div class="hamburger-box">
@@ -51,11 +52,15 @@
             isOpen = !isOpen;
         });
 
+        
+
         function fadeIn() {
             document.getElementById("main").style.opacity = "1";
             document.getElementById("main").style.marginTop = "0px";
 
         }
+
+        
 
 
 
@@ -70,6 +75,8 @@
         }
     </script>
     <div id="main">
+        <div id="fadeIn">
+        <div class="spacer"></div>
         <h2>Projects</h2>
         <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
         <div class="project-items">
@@ -80,12 +87,13 @@
             </div>
 
             <div>
-                Hello, box 2
+                <h3>Hello, box 2</h3>
             </div>
 
             <div>
-                Hello, box 3
+                <h3>Hello, box 3</h3>
             </div>
+        </div>
         </div>
     </div>
 </body>
