--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Website in progress...">
   <meta name="keywords" content="remym, moscovitz, remymoscovitz, rmoscovitz">
   <link rel="icon" href="rm_custom_icon.png" type="image/png">
-  <title>Contact</title>
+  <title>Home</title>
   <meta property="og:title" content="Remy Mosvitz" />
   <meta property="og:description" content="Wesite in progress..." />
   <meta property="og:image" content="rm_custom_icon.png" />
@@ -16,7 +16,9 @@
 </head>
 
 <body onload="fadeIn()">
-  <div class="top_fade"> </div>
+  <div class="top_fade"> 
+    <img src="white_nav_icon.png" class="top-right-logo">
+  </div>
   <div id="mySidenav" class="sidenav">
     <a href="#">LinkedIn</a>
     <a href="projects.html">Projects</a>
@@ -69,11 +71,13 @@
   </script>
 
   <div id="main">
-    <div id="fadeIn">
+    
      
-      <div class="spacer"></div>
-      <h2 style="font-size: 2rem;">Home</h2>
-      <p style="font-size: 1 rem;">Click on the element below to open the side navigation menu, and push this content to
+    <div class="spacer">
+      </div>
+       <div id="fadeIn">
+       <h2 style="font-size: 2rem;">Home</h2>
+       <p style="font-size: 1 rem;">Click on the element below to open the side navigation menu, and push this content to
         the right. ck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content tck on the element below to open the side navigation menu, and push this content t</p>
     </div>
   </div>
