--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 </head>
 
 <body onload="fadeIn()">
-    <div class="top_fade"> </div>
+    <div class="top_fade"> <img src="white_nav_icon.png" class="top-right-logo"></div>
     <div id="mySidenav" class="sidenav">
         <a href="home.html">Home</a>
         <a href="contact.html">LinkedIn</a>
